# nixos-core

./: Cargo.toml  flake.nix
crates/activation-common/: Cargo.toml  README.md
crates/init-script/: Cargo.toml  README.md
crates/setup-etc/: Cargo.toml  README.md
crates/stage1/: README.md
crates/stage1/src/: lib.rs
crates/stage2/: Cargo.toml  README.md
crates/update-users-groups/: Cargo.toml  README.md
docs/: README.md
nix/modules/: nixos.nix
nix/vm-tests/: boot.nix  container.nix
