[workspace]
members  = [ "crates/*", "nixos-core" ]
resolver = "3"

[workspace.package]
edition      = "2024"
license      = "MPL-2.0"
repository   = "https://github.com/feel-co/nixos-core"
rust-version = "1.94.0"
version      = "1.0.0"

[workspace.dependencies]
# Internal components
activation-common   = { path = "./crates/activation-common", version = "1.0.0" }
init-script         = { path = "./crates/init-script", version = "1.0.0" }
setup-etc           = { path = "./crates/setup-etc", version = "1.0.0" }
stage1              = { path = "./crates/stage1", version = "1.0.0" }
stage2              = { path = "./crates/stage2", version = "1.0.0" }
update-users-groups = { path = "./crates/update-users-groups", version = "1.0.0" }

anyhow = "1.0.102"
clap = { version = "4.6.1", default-features = false, features = [
  "derive",
  "env",
  "std",
  "help",
  "usage",
  "error-context",
] }
env_logger = { version = "0.11.10", default-features = false }
libc = "0.2.185"
log = "0.4.29"
nix = { version = "0.31.2", features = [ "user", "fs", "process", "mount" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
sha-crypt = { version = "0.6.0", default-features = false }
smfh-core = "1.5.0"
tempfile = "3.27.0"
time = { version = "0.3.47", default-features = false, features = [ "parsing", "formatting", "macros" ] }

[workspace.lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
pedantic   = { level = "warn", priority = -1 }
perf       = { level = "warn", priority = -1 }
style      = { level = "warn", priority = -1 }

[workspace.lints.rust]
# Style lints from rustc
unused = "warn"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true
