[package]
name                   = "update-users-groups"
description            = "NixOS user and group management"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme                 = "./README.md"

[dependencies]
anyhow.workspace     = true
clap.workspace       = true
libc.workspace       = true
serde.workspace      = true
serde_json.workspace = true
sha-crypt.workspace  = true
